# quadcopter

./: .clang-format  .clang-tidy  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  conanfile.txt  main.cpp
app/: CMakeLists.txt  main.cpp  version.hpp.in
hal/: CMakeLists.txt  Hardware.cpp  ReturnDevice.cpp
hal/board/: CMakeLists.txt
hal/board/raspberrypi3bplus/: Board.cpp  BoardLinux.cpp  CMakeLists.txt  InitLinux.cpp
hal/board/raspberrypi3bplus/include/private/raspberrypi3bplus/: Board.hpp
hal/board/raspberrypi3bplus/include/public/raspberrypi3bplus/: DeviceId.hpp
hal/platform/linux/: CMakeLists.txt
hal/platform/linux/gpio/: BroadcomGpioMem.cpp  BroadcomGpioMem.hpp  CMakeLists.txt  SysFsGpio.hpp
hal/platform/linux/uart/: CMakeLists.txt  TtyUart.cpp  TtyUart.hpp
hal/private/: CMakeLists.txt
hal/private/include/hal/: IBoard.hpp  ISimpleBoard.hpp
hal/private/include/hal/gpio/: IGpioPort.h  IGpioPort.hpp  PinInput.hpp  PinOutput.hpp  PortInput.hpp  PortOutput.hpp
hal/product/: CMakeLists.txt
hal/product/quadcopter_rpi/: CMakeLists.txt  Hardware.cpp
hal/product/quadcopter_rpi/include/product/: factory.hpp
hal/public/: CMakeLists.txt  Device.cpp  Error.cpp  IUart.cpp
hal/public/include/hal/: Device.hpp  Error.hpp  Hardware.hpp  factory.hpp  types.hpp
hal/public/include/hal/gpio/: IPinInput.hpp  IPinOutput.hpp  IPortInput.hpp  IPortOutput.hpp  types.h  types.hpp
hal/public/include/hal/uart/: IUart.hpp
utils/: CMakeLists.txt  Error.cpp  logger.cpp
utils/include/utils/: Error.hpp  logger.hpp
